--- a/env/tmux.conf
+++ b/env/tmux.conf
@@ -1,3 +1,24 @@
+# remap prefix
+#unbind C-b
+#set-option -g prefix C-a
+#bind-key C-a send-prefix
+
+# split window
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# reload .tmux.conf
+bind r source-file ~/.tmux.conf
+
+# switch panel
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+
 setw -g mouse-resize-pane on
 setw -g mouse-select-pane on
 setw -g mouse-select-window on
