--- a/env/tmux.conf
+++ b/env/tmux.conf
@@ -17,8 +17,17 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+# zoom in and out panel
+bind -n M-z resize-pane -Z
+# sync panels
+bind -n M-S setw synchronize-panes
 
+# create, close, choose window
+bind -n M-c new-window
+bind -n M-x kill-window
+bind -n M-w list-windows
 
+# mouse mapping and vi mode
 setw -g mouse-resize-pane on
 setw -g mouse-select-pane on
 setw -g mouse-select-window on
