--- a/env/tmux.conf
+++ b/env/tmux.conf
@@ -28,6 +28,8 @@ bind -n M-x kill-window
 bind -n M-w list-windows
 
 # mouse mapping and vi mode
+# note: you must use shift key to
+# select and copy by mouse
 setw -g mouse-resize-pane on
 setw -g mouse-select-pane on
 setw -g mouse-select-window on
