add clang-format and map window,tab,buffer key

--- a/env/.tmux.conf
+++ b/env/.tmux.conf
@@ -6,8 +6,8 @@
 # split window
 #bind | split-window -h
 #bind - split-window -v
-bind -n M-| split-window -h
-bind -n M-- split-window -v
+bind -n M-- split-window -h
+bind -n M-| split-window -v
 unbind '"'
 unbind %
 
